change vscode title color for backend

--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.colorCustomizations": {
-    "titleBar.activeBackground": "#FF2C70",
-    "titleBar.inactiveBackground": "#FF2C70CC"
+    "titleBar.activeBackground": "#0f9393",
+    "titleBar.inactiveBackground": "#0f9393"
   }
 }
